Added the background-image

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(Deeperlife.jpg);
+    background-image: url(./church.jpg);
     background-size: cover;
     font-family: O'Segoe UI', xygen, BlinkMacSystemFont, -apple-system,   Roboto,  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 30px;
