--- a/index.css
+++ b/index.css
@@ -1,41 +1,44 @@
 body {
     background-image: url(./church.jpg);
     background-size: cover;
-    font-family: O'Segoe UI', xygen, BlinkMacSystemFont, -apple-system,   Roboto,  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 30px;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.container{
-    background-color: wheat;
+.container {
+    background: white;
     max-width: 80%;
-    margin: auto;
-    border: solid 2px;
+    border: 3px solid black;
     border-radius: 10px;
+    padding: 40px;
 }
 
 h1 {
-    margin-top: 50px;
+    margin-top: 10px;
+    color: #000000;
     margin-bottom: 10px;
 }
 
 h2 {
     font-size: 50px;
     margin-top: 0;
+    color: #000000;
     margin-bottom: 20px;
 }
 
 button {
-    border: none;
+    border: 1px solid black;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: rgb(255, 255, 255);
+    color: white;
     font-weight: bold;
     width: 200px;
     margin-bottom: 5px;
     border-radius: 5px;
-    margin-top: 1px;
 }
 
 #increment-btn {
